[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/entitys/pickups/Pickup.gd" type="Script" id=1]
[ext_resource path="res://addons/anima/core/tween.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="SpatialMaterial" id=3]

[sub_resource type="CubeMesh" id=2]
material = SubResource( 3 )
size = Vector3( 0.5, 0.5, 0.5 )

[node name="Pickup" type="Spatial"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Pickuparea" type="Area" parent="."]

[node name="Pickupshape" type="CollisionShape" parent="Pickuparea"]
shape = SubResource( 1 )

[node name="AnimaTween" type="Tween" parent="."]
script = ExtResource( 2 )

[node name="AnimEnd" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.828897, 0 )

[node name="Payloads" type="Node" parent="."]

[node name="MeshNode" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[connection signal="body_entered" from="Pickuparea" to="." method="_on_Pickuparea_body_entered"]
